--- a/.github/workflows/force-push.yml
+++ b/.github/workflows/force-push.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           TOKEN: ${{ secrets.GH_PAT }}
         run: |
-          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }} HEAD:main
+          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:main
