--- a/.github/workflows/force-push.yml
+++ b/.github/workflows/force-push.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # <— ВАЖНО: отключаем встроенный токен GitHub Actions
 
       - name: Setup Git
         run: |
@@ -27,7 +29,8 @@ jobs:
           git add .render_trigger
           git commit -m "Trigger deploy [auto]" || echo "No changes"
 
-      - name: Push changes
+      - name: Push changes with PAT
         run: |
+          git config --unset-all http.https://github.com/.extraheader
           git remote set-url origin https://x-access-token:$GH_PAT@github.com/${{ github.repository }}
           git push origin HEAD:main
